--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@hono/node-server": "^1.4.1",
     "@prisma/client": "^5.8.1",
+    "hono": "^3.12.6",
     "prisma": "^5.8.1"
   }
 }
