--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,7 @@
     "@hono/node-server": "^1.4.1",
     "@prisma/client": "^5.8.1",
     "hono": "^3.12.6",
-    "prisma": "^5.8.1"
+    "prisma": "^5.8.1",
+    "zod": "^3.22.4"
   }
 }
