--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "swr": "^2.2.4",
+    "valtio": "^1.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
