[server] added socket io server

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
     "hono": "^3.12.6",
     "next-auth": "^4.24.5",
     "prisma": "^5.8.1",
+    "socket.io": "^4.7.4",
     "zod": "^3.22.4"
   }
 }
