--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "socket.io-client": "^4.7.4",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
